crates/swc/tests/tsc-references/objectLiteralShorthandPropertiesAssignmentError_es2015.1.normal.js
// @lib: es5
var id = 10000;
var name = "my name";
var person = {
    name,
    id
}; // error
var person1; // ok
function foo(name, id) {
    return {
        name,
        id
    };
} // error
function bar(obj) {}
bar({
    name,
    id
}); // error
